--- a/kube-service.yaml
+++ b/kube-service.yaml
@@ -1,34 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: bdf-exalab
-  name: sb-app
+  name: microservice
   labels:
-    app: sb-app
+    app: microservice
 spec:
-  selector:              
-    app: sb-app
-  type: NodePort
+  type: LoadBalancer
   ports:
-  - name: http              
-    port: 80
-    targetPort: sb-app
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: bdf-exalab
-  name: sb-app2
-  labels:
-    app: sb-app2
-spec:
-  selector:              
-    app: sb-app
-  type: NodePort
-  ports:
-  - name: http2           
-    port: 81
-    targetPort: sb-app2
-
-        
+  - port: 8000
+    nodePort: 30080
+  selector:
+    app: microservice
