--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.training</groupId>
-			<artifactId>custom-starter</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.bdf.exa.metrics</groupId>
-  			<artifactId>metrics-spring-boot-starter</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
@@ -94,6 +83,7 @@
     </dependencyManagement>
     
 	<build>
+	<finalName>microservice</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
