--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8000
 keycloak.auth-server-url= http://localhost:7080/auth
-keycloak.resource= angular-app
-keycloak.realm= Application-realm
+keycloak.resource= first-application
+keycloak.realm= first-realm
 keycloak.public-client= true
 keycloak.principal-attribute=preferred_username
 #we do not write a web-app - so no login page and redirects are necessary
 keycloak.bearer-only=true
+file.uploadDir=/tmp/upload
