--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ keycloak.public-client= true
 keycloak.principal-attribute=preferred_username
 #we do not write a web-app - so no login page and redirects are necessary
 keycloak.bearer-only=true
-file.uploadDir=/tmp/upload
+file.uploadDir=/tmp/upload/
